--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
 .container{width:1000px}
 .sidebar{width:200px;float:left}
 .rightbar{width:700px;float:right}
-.list-photos .photo{display:inline-block;margin:10px}
+.list-photos .photo{display:inline-block;margin:10px}.list-photos .photo img{max-width:300px}
